--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -128,12 +128,12 @@
         <div style="flex: 3;">
             <div class="container">
                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
-                                    <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                    <!-- <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
                                         วันที่ 31 สิงหาคม 2568 มีการสอบย่อยในช่วงเวลา 08:10 - 08:40 น. ไม่มีการสอบย้อนหลัง เช็คคะแนนเข้าเรียน(คะแนนฟรี 1 คะแนน)จากการส่งสอบย่อยครับ
-                                    </p>
+                                    </p> -->
 
                                     <h5 style="color: #2600ff; margin-bottom: 0.5rem; border-left: 4px solid #2600ff;background-color: #cecbff; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ประกาศงานกลุ่ม
@@ -206,6 +206,10 @@
                                                 <li>Excel: <a href="../assets/handout/Forecasting-excel.xlsx">link</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 6 (7 กันยายน)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250907.pdf">download</a></li>
+                                            </ul></li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
                                         <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
                                     </ul>
@@ -234,6 +238,9 @@
                                         <li><b>การบ้าน 3</b>: Decision Theory and Simulation (due date 23 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw3_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 6 กันยายน 15:00 น.) <a href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 6</b>: ทฤษฎีเกม (due date 14 กันยายน 21:00 น.) <a href="../assets/handout/homework/hw6.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw6_sol.pdf">(เฉลย)</a></li>
+
+
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         ข้อสอบ
@@ -243,7 +250,9 @@
                                         <li><b>สอบย่อยครั้งที่ 1</b>: การเขียนกำหนดการเชิงเส้น <a href="../assets/handout/exam/quiz1.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/exam/quiz1_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบย่อยครั้งที่ 2</b>: การทำซิมเพล็กซ์ <a href="../assets/handout/exam/quiz2.pdf">(โจทย์)</a> <a href="../assets/handout/exam/quiz2_sol.pdf">(เฉลย)</a></li>
                                         <li><b>สอบกลางภาค</b>: <a href="../assets/handout/exam/midterm.pdf">(โจทย์)</a> <a href="../assets/handout/exam/midterm_sol.pdf">(เฉลย)</a></li>
-                                        <li><b>สอบย่อยครั้งที่ 3</b>: Markov Analysis <a href="../assets/handout/homework/quiz3.pdf">(โจทย์)</a> <a href="../assets/handout/homework/quiz3_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 3</b>: Markov Analysis <a href="../assets/handout/homework/quiz3.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz3_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>สอบย่อยครั้งที่ 4</b>: Forecasting <a href="../assets/handout/homework/quiz4.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/quiz4_sol.pdf">(เฉลย)</a></li>
+
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
