--- a/teaching.html
+++ b/teaching.html
@@ -190,6 +190,46 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:var(--darkblue);color:var(--gold);border: 0.5px solid var(--gold);font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                821303 - Software Application for Accounting (การประยุกต์โปรแกรมสำเร็จรูปเพื่องานบัญชี)
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        คำอธิบายรายวิชา
+                                    </h4>
+                                    <p style="padding-bottom: 24px;">
+                                        ความรู้ บทบาท หลักการ ความสำคัญ และฝึกปฏิบัติการใช้โปรแกรมทั่วไปเพื่อประยุกต์ในงานบัญชี การจัดทำข้อมูล การวิเคราะห์ข้อมูล สรุปข้อมูลและจัดทำรายงานเพื่อใช้ในการตัดสินใจ
+                                    </p>
+
+                                    <p style="padding-bottom: 24px;">
+                                        <a href="teaching/821303-B0-2-2568.html" target="_blank" style="pointer-events: none; color: #aaa;">Block 0 ภาคปลาย ปีการศึกษา 2568</a> (....). ... TBA (online)<br>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:var(--darkblue);color:var(--gold);border: 0.5px solid var(--gold);font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                819605 - Discrete Mathematics (วิยุตคณิต)
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        คำอธิบายรายวิชา
+                                    </h4>
+                                    <p style="padding-bottom: 24px;">
+                                        ...
+                                    </p>
+
+                                    <p style="padding-bottom: 24px;">
+                                        <a href="teaching/819605-B0-2-2568.html" target="_blank" style="pointer-events: none; color: #aaa;">Block 0 ภาคปลาย ปีการศึกษา 2568</a> (....). ... TBA (online)<br>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <script>
