--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -142,7 +142,7 @@
                                         แบ่งกลุ่ม กลุ่มละ 5-6 คน (แบ่งกันเองนะครับ โตๆ กันแล้วอาจารย์เชื่อว่าจัดการเรื่องกลุ่มกันเองได้ครับ ไม่มีการ log รายชื่อคนในกลุ่มใด ๆ ทั้งนั้น)<br>
                                         <b>กำหนดส่งงานกลุ่มภายในวันที่ 30 กันยายน 2568</b><br>
                                         <b>รายละเอียด</b>:
-                                        <ul style="padding-left: 24px; color: #2600ff">
+                                        <ul style="padding-left: 24px; color: #2600ff; padding-bottom: 24px;">
                                             <li>หัวข้อ: การทำนายราคาหน่วยลงทุนกองทุนรวมด้วยตัวแบบการทำนายแบบต่าง ๆ</li>
                                             <li>รูปแบบ: รายงาน (Paper)</li>
                                             <li>ความยาว: ไม่เกิน 4 หน้ากระดาษ A4 ประกอบไปด้วย</li>
