--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <div class="content">
                                     <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                                         <li class="nav-item">
-                                            <a class="nav-link active" id="research-template" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Research</a>
+                                            <a class="nav-link" id="research-template" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Research</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="job-template" data-toggle="tab" href="#job" role="tab" aria-controls="job" aria-selected="true">Job</a>
@@ -190,26 +190,26 @@
                                             <a class="nav-link" id="project-template" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Project</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="public-template" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="true">Publication</a>
+                                            <a class="nav-link active" id="public-template" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="true">Publication</a>
                                         </li>
                                     </ul>
 
                                     <div class="tab-content" id="myTabContent">
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade" id="public" role="tabpanel" aria-labelledby="public-template">
+                                        <div class="tab-pane fade show active" id="public" role="tabpanel" aria-labelledby="public-template">
                                             <!-- <div class="content-list"> -->
                                                 <ol>
                                                     <li style="color: white;">
-                                                        <span style="color: red; font-weight: bold;">(1)</span> <a href=""></a> (IN PROGRESS)
+                                                        <span style="color: rgb(255, 255, 255); font-weight: bold;">(1)</span> <a style="color: red;" href="https://rxiv.org/abs/2502.13471">From Features to Graphs: Exploring Graph Structures and Pairwise Interactions via GNNs</a> (Preprint)
                                                     </li>
                                                     <li style="color: white;">
-                                                        <span style="color: red; font-weight: bold;">(2)</span> <a href="https://www.researchgate.net/publication/349103793_Generalized_Lojasiewicz_Inequality_in_Expansions_of_the_Real_Field">Generalized Lojasiewicz Inequality in expansions of the real field</a> (with Athipat Thamrongthanyalak), Proceedings of Annual Pure and Applied Mathematics Conference (2020), 244-251.
+                                                        <span style="color: rgb(255, 255, 255); font-weight: bold;">(2)</span> <a style="color: red;" href="https://www.researchgate.net/publication/349103793_Generalized_Lojasiewicz_Inequality_in_Expansions_of_the_Real_Field">Generalized Lojasiewicz Inequality in expansions of the real field</a> (with Athipat Thamrongthanyalak), Proceedings of Annual Pure and Applied Mathematics Conference (2020), 244-251.
                                                     </li>
                                                 </ol>
                                             <!-- </div> -->
                                         </div>
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade show active" id="research" role="tabpanel" aria-labelledby="research-template">
+                                        <div class="tab-pane fade" id="research" role="tabpanel" aria-labelledby="research-template">
                                             <div class="content-list">
                                                 <ol>
                                                     <li>
