--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -212,6 +212,10 @@
                                                 <li>Note: <a href="../assets/handout/Quantitative_Analysis_250907.pdf">download</a></li>
                                             </ul></li>
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
+                                        <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>Note: <a href="../assets/handout/Quantitative_Analysis_250914.pdf">download</a></li>
+                                            </ul></li>
                                         <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
@@ -240,6 +244,7 @@
                                         <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 6 กันยายน 15:00 น.) <a href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 6</b>: ทฤษฎีเกม (due date 14 กันยายน 21:00 น.) <a href="../assets/handout/homework/hw6.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw6_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 7</b>: ยำรวมทวนก่อนสอบ (due date 21 กันยายน 12:00 น. ก่อนเข้าห้องสอบ) <a href="../assets/handout/homework/hw7.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw7_sol.pdf">(เฉลย)</a></li>
 
 
                                     </ul>
