--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -244,7 +244,7 @@
                                         <li><b>การบ้าน 4</b>: Markov Analysis (due date 30 สิงหาคม 15:00 น.) <a href="../assets/handout/homework/hw4.pdf">(โจทย์)</a> <a href="../assets/handout/homework/hw4_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 5</b>: การทำนายและการประเมิณผลตัวแบบการทำนาย (due date 6 กันยายน 15:00 น.) <a href="../assets/handout/homework/hw5.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw5_sol.pdf">(เฉลย)</a></li>
                                         <li><b>การบ้าน 6</b>: ทฤษฎีเกม (due date 14 กันยายน 21:00 น.) <a href="../assets/handout/homework/hw6.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw6_sol.pdf">(เฉลย)</a></li>
-                                        <li><b>การบ้าน 7</b>: ยำรวมทวนก่อนสอบ (due date 21 กันยายน 12:00 น. ก่อนเข้าห้องสอบ) <a href="../assets/handout/homework/hw7.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw7_sol.pdf">(เฉลย)</a></li>
+                                        <li><b>การบ้าน 7</b>: ยำรวมทวนก่อนสอบ (due date 20 กันยายน 23:55 น. และเฉลยตอน 08:00 - 11:00 ก่อนเข้าห้องสอบ) <a href="../assets/handout/homework/hw7.pdf">(โจทย์)</a> <a style="color: rgb(179, 179, 179)" href="../assets/handout/homework/hw7_sol.pdf">(เฉลย)</a></li>
 
 
                                     </ul>
