edit project and public

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <section id="resume">
                 <div class="container">
                     <div class="row">
+                        
                         <div class="my-wrapper">
                             <div class="left-wrapper">
                                 <div class="content">
@@ -184,7 +185,7 @@
                                     <div class="list-inner">
                                         <ol>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Ph.D. Computer Science
                                                 </h4>
@@ -200,7 +201,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     M.Sc. Mathematics
                                                 </h4>
@@ -216,7 +217,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     B.Sc. Mathematics
                                                 </h4>
@@ -236,6 +237,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="inter">
+                                <h6>RESUME</h6>
+                            </div>
                             <div class="right-wrapper">
                                 <div class="content">
                                     <div class="head">
@@ -244,7 +248,7 @@
                                     <div class="list-inner">
                                         <ol>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Lecturer in Computer Science and Engineering
                                                 </h4>
@@ -257,7 +261,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Machine Learning consultant
                                                 </h4>
@@ -270,7 +274,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Data Science and Analytics Mentor
                                                 </h4>
@@ -284,7 +288,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Data and AI Engineer
                                                 </h4>
@@ -299,7 +303,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Intern Researcher
                                                 </h4>
@@ -313,7 +317,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Invited Mathematics and Computer Teacher
                                                 </h4>
@@ -328,7 +332,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Research Assistant and Assistant Data Scientist
                                                 </h4>
@@ -342,7 +346,7 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                <h4 class="exp-toggle" style="font-size:0.9em; cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Data Analyst
                                                 </h4>
@@ -363,11 +367,18 @@
                                         background: #d32f2f;
                                         color: #fff;
                                         border-radius: 6px;
-                                        padding: 8px 14px;
+                                        padding: 4px 14px;
                                         margin-bottom: 4px;
                                         user-select: none;
                                         transition: background 0.2s, color 0.2s;
                                         box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+                                    }
+                                    .exp-detail {
+                                        /* background: #f5f5f5; */
+                                        border-radius: 6px;
+                                        padding: 12px;
+                                        margin-bottom: 0px;
+                                        /* box-shadow: 0 1px 2px rgb(255, 255, 255); */
                                     }
                                     .exp-toggle:hover {
                                         background: #b71c1c;
@@ -395,9 +406,6 @@
                                         });
                                     });
                                     </script>
-                            <div class="inter">
-                                <h6>RESUME</h6>
-                            </div>
                         </div>
                     </div>
                 </div>
