edit project and public

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
                                                     <div class="project-card">
                                                         <div class="card-header">
-                                                            <h4> Web Application for Submitting Machine Learning Jobs</h4>
+                                                            <h4>Web Application for Submitting Machine Learning Jobs</h4>
                                                             <span class="project-type">Industry Project</span>
                                                         </div>
                                                         <div class="card-body">
@@ -645,7 +645,7 @@
                                                                     <span class="tech-tag">Streamlit</span>
                                                                     <span class="tech-tag">Celery</span>
                                                                 </div>
-                                                                <a href="#" class="project-link disabled" onclick="return false;" style="color: #999; cursor: not-allowed; text-decoration: none; pointer-events: none;">Learn More</a>
+                                                                <a href="assets/streamlit web app UI.pdf" class="project-link">Learn More</a>
                                                             </div>
                                                         </div>
                                                     </div>
