--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                                             <figure>
                                                                 <img src="assets/images/jaist2024/jaist2024_1.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="JAIST2024.html" target="_blank">JAIST2024</a>
+                                                                    <a href="portfolio/JAIST2024.html" target="_blank">JAIST2024</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
@@ -562,7 +562,7 @@
                                                             <figure>
                                                                 <img src="assets/images/APAM2022/APAM2022_1.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="APAM2022.html" target="_blank">APAM2022</a>
+                                                                    <a href="portfolio/APAM2022.html" target="_blank">APAM2022</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
