--- a/portfolio/APAM2022.html
+++ b/portfolio/APAM2022.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>JAIST2024</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>APAM2022</title>
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/font/flaticon.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         /*# sourceMappingURL=style.css.map */
         /* Slideshow container */
@@ -112,11 +112,11 @@
                 <i onclick="hide_menu()" class="flaticon-cancel"></i>
             </span>
             <ul>
-                <li><a onclick="hide_menu()" href="#home">Home</a></li>
-                <li><a onclick="hide_menu()" href="#about">ABOUT ME</a></li>
-                <li><a onclick="hide_menu()" href="#resume">Resume</a></li>
-                <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
-                <li><a onclick="hide_menu()" href="#contact">Contact</a></li>
+                <li><a onclick="hide_menu()" href="../index.html#home">Home</a></li>
+                <li><a onclick="hide_menu()" href="../index.html#about">ABOUT ME</a></li>
+                <li><a onclick="hide_menu()" href="../index.html#resume">Resume</a></li>
+                <li><a onclick="hide_menu()" href="../index.html#portfolio">Projects</a></li>
+                <li><a onclick="hide_menu()" href="../index.html#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -125,7 +125,7 @@
             <div class="container" >
                 <div class="main-nav">
                     <div class="logo">
-                        <h2><a href="index.html" style="color: rgb(255, 255, 255);">< homepage</a></h2>
+                        <h2><a href="../index.html" style="color: rgb(255, 255, 255);">< homepage</a></h2>
                     </div>
                     <div class="social-media">
                         <ul>
@@ -142,8 +142,8 @@
 
     <section id="about" style="background-color: rgb(0, 0, 0); padding: 0.7rem 0;">
         <div class="container">
-            <h1 style="color: red;">JAIST 2024</h1>
-            <p style="color: white;">Research Internship at JAIST in Realearn Lab</p>
+            <h1 style="color: red;">APAM 2022</h1>
+            <p style="color: white;">Presentation for my Research</p>
         </div>
     </section>
     <br>
@@ -151,16 +151,23 @@
     <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides">
-            <img src="assets/images/jaist2024/jaist2024_1.jpg" alt="1">
+            <img src="../assets/images/APAM2022/APAM2022_1.jpg" alt="APAM2022_1">
         </div>
+  
         <div class="mySlides">
-            <img src="assets/images/jaist2024/jaist2024_2.jpg" alt="2">
+            <img src="../assets/images/APAM2022/APAM2022_2.jpg" alt="APAM2022_2">
         </div>
+  
         <div class="mySlides">
-            <img src="assets/images/jaist2024/jaist2024_3.jpg" alt="3">
+            <img src="../assets/images/APAM2022/APAM2022_3.jpg" alt="APAM2022_3">
         </div>
+
         <div class="mySlides">
-            <img src="assets/images/jaist2024/jaist2024_4.jfif" alt="4">
+            <img src="../assets/images/APAM2022/APAM2022_4.jpg" alt="APAM2022_4">
+        </div>
+
+        <div class="mySlides">
+            <img src="../assets/images/APAM2022/APAM2022_5.jpg" alt="APAM2022_5">
         </div>
   
         <!-- Next and previous buttons -->
@@ -175,12 +182,12 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
-        <!-- <span class="dot" onclick="currentSlide(5)"></span> -->
+        <span class="dot" onclick="currentSlide(5)"></span>
     </div>
 
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/jquery-3.2.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/script.js"></script>
     <script>
         let slideIndex = 1;
         showSlides(slideIndex);
