--- a/portfolio/JAIST2024.html
+++ b/portfolio/JAIST2024.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>APAM2022</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>JAIST2024</title>
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/font/flaticon.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         /*# sourceMappingURL=style.css.map */
         /* Slideshow container */
@@ -142,8 +142,8 @@
 
     <section id="about" style="background-color: rgb(0, 0, 0); padding: 0.7rem 0;">
         <div class="container">
-            <h1 style="color: red;">APAM 2022</h1>
-            <p style="color: white;">Presentation for my Research</p>
+            <h1 style="color: red;">JAIST 2024</h1>
+            <p style="color: white;">Research Internship at JAIST in Realearn Lab</p>
         </div>
     </section>
     <br>
@@ -151,23 +151,16 @@
     <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides">
-            <img src="assets/images/APAM2022/APAM2022_1.jpg" alt="APAM2022_1">
+            <img src="../assets/images/jaist2024/jaist2024_1.jpg" alt="1">
         </div>
-  
         <div class="mySlides">
-            <img src="assets/images/APAM2022/APAM2022_2.jpg" alt="APAM2022_2">
+            <img src="../assets/images/jaist2024/jaist2024_2.jpg" alt="2">
         </div>
-  
         <div class="mySlides">
-            <img src="assets/images/APAM2022/APAM2022_3.jpg" alt="APAM2022_3">
+            <img src="../assets/images/jaist2024/jaist2024_3.jpg" alt="3">
         </div>
-
         <div class="mySlides">
-            <img src="assets/images/APAM2022/APAM2022_4.jpg" alt="APAM2022_4">
-        </div>
-
-        <div class="mySlides">
-            <img src="assets/images/APAM2022/APAM2022_5.jpg" alt="APAM2022_5">
+            <img src="../assets/images/jaist2024/jaist2024_4.jfif" alt="4">
         </div>
   
         <!-- Next and previous buttons -->
@@ -182,12 +175,12 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
+        <!-- <span class="dot" onclick="currentSlide(5)"></span> -->
     </div>
 
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/jquery-3.2.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/script.js"></script>
     <script>
         let slideIndex = 1;
         showSlides(slideIndex);
