--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                             <div class="social-media" >
                                 <ul style="display: flex; justify-content: space-between; align-items: center;">
                                     <li>
+                                        <a href="resume.html" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            well-formatted Resume
+                                        </a>
+                                    </li>
+                                    <li>
                                         <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
                                             LinkedIn
                                         </a>
