--- a/resume.html
+++ b/resume.html
@@ -545,12 +545,36 @@
             max-width: 280px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             z-index: 999;
-            transition: all 0.3s ease;
+            transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            animation: bounceIn 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+
+        @keyframes bounceIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.3) translateY(-100px);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1.05) translateY(0);
+            }
+            70% {
+                transform: scale(0.9) translateY(0);
+            }
+            100% {
+                transform: scale(1) translateY(0);
+            }
         }
 
         .ai-credit:hover {
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
-            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+            transform: translateY(-5px) scale(1.02);
+            transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+        }
+
+        .ai-credit:active {
+            transform: translateY(-2px) scale(0.98);
+            transition: all 0.1s ease;
         }
 
         .ai-credit-text {
