--- a/teaching.html
+++ b/teaching.html
@@ -558,7 +558,7 @@
             <div class="course-card">
                 <div class="course-header">
                     <div class="course-code">720401</div>
-                    <div class="course-name">Information Technology for Business</div>
+                    <div class="course-name">Information Technology for Business<br><small style="font-size: 0.9rem; opacity: 0.9;">(เทคโนโลยีสารสนเทศสำหรับธุรกิจ)</small></div>
                 </div>
                 <div class="course-body">
                     <div class="course-description">
@@ -589,7 +589,7 @@
             <div class="course-card">
                 <div class="course-header">
                     <div class="course-code">720201</div>
-                    <div class="course-name">Quantitative Analysis for Business</div>
+                    <div class="course-name">Quantitative Analysis for Business<br><small style="font-size: 0.9rem; opacity: 0.9;">(การวิเคราะห์เชิงปริมาณสำหรับธุรกิจ)</small></div>
                 </div>
                 <div class="course-body">
                     <div class="course-description">
