--- a/teaching.html
+++ b/teaching.html
@@ -597,15 +597,6 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/720201-B1-1-2568.html" class="section-link">Block 1 ภาคต้น ปีการศึกษา 2568</a>
-                            <div class="section-details">
-                                <div class="section-detail-item">2 ส.ค. 2568 - 21 ก.ย. 2568</div>
-                                <div class="section-detail-item">อาทิตย์ 08:00 - 13:35</div>
-                                <div class="section-detail-item">Room: 507 อาคารสนง.อธิการบดี</div>
-                            </div>
-                            <span class="badge current">Current</span>
-                        </div>
-                        <div class="section-item">
                             <a href="teaching/720201-2-2568.html" class="section-link disabled">ภาคปลาย ปีการศึกษา 2568</a>
                             <div class="section-details">
                                 <div class="section-detail-item">XXXX - XXXX</div>
@@ -731,12 +722,13 @@
                     </div>
                     <div class="course-sections">
                         <div class="section-item">
-                            <a href="teaching/720201-B0-1-2567.html" class="section-link disabled">Block 0 ภาคต้น ปีการศึกษา 2567</a>
+                            <a href="teaching/720201-B1-1-2568.html" class="section-link">Block 1 ภาคต้น ปีการศึกษา 2568</a>
                             <div class="section-details">
-                                <div class="section-detail-item">ภาคเรียนที่ 1/2567</div>
-                                <div class="section-detail-item">Previous academic year</div>
+                                <div class="section-detail-item">2 ส.ค. 2568 - 21 ก.ย. 2568</div>
+                                <div class="section-detail-item">อาทิตย์ 08:00 - 13:35</div>
+                                <div class="section-detail-item">Room: 507 อาคารสนง.อธิการบดี</div>
                             </div>
-                            <span class="badge" style="background: #e0e0e0; color: #616161;">Completed</span>
+                            <span class="badge">Completed</span>
                         </div>
                     </div>
                 </div>
