--- a/teaching.html
+++ b/teaching.html
@@ -704,7 +704,7 @@
                                 <div class="section-detail-item">อาทิตย์ 08:00 - 13:35</div>
                                 <div class="section-detail-item">Room: IT309</div>
                             </div>
-                            <span class="badge" style="background: #e0e0e0; color: #616161;">Completed</span>
+                            <span class="badge">Completed</span>
                         </div>
                     </div>
                 </div>
